赠送积分+搜索店铺

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -48,6 +48,7 @@
                     android:text=""
                     android:textSize="12sp"
                     android:textColor="@color/grayText"
+                    android:textColorHint="@color/grayText"
                     android:layout_gravity="center_vertical"/>
 
 
