1:优化了PhotoView滑动闪退 2：修改商品详情图片无法保存的bug

--- a/app/src/main/res/layout/item_big_image.xml
+++ b/app/src/main/res/layout/item_big_image.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.cinderellavip.weight.scaleimage.PhotoView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/photoView"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
